layout, style improvements

--- a/index.css
+++ b/index.css
@@ -4,10 +4,14 @@ body{
     background-color: thistle;
     }
 
-a:link, a:visited, a:hover, a:active {
-    text-decoration: none;
-    color: black;
+a:link, a:visited,  a:active {
+    color: blue;
+    text-decoration: underline;
   }
+
+a:hover{
+   color: black;
+}
 
 .navbar-nav > li > .dropdown-menu { background-color: thistle;}
 
